@@ -18,5 +18,5 @@ package net.sf.oval.internal.util;
  */
 public interface Invocable
 {
-	Object invoke() throws Exception;
+	Object invoke() throws Throwable;
 }
