@@ -6,7 +6,7 @@
 	<!-- define a constraint set -->
 	<constraintSet id="user.userid">
 		<notNull message="{context} is null" />
-		<matchPattern message="{context} does not match the pattern {pattern}">
+		<matchPattern message="{context} does not match the pattern {pattern}" matchAll="true">
 			<pattern pattern="^[a-z0-9]{8}$" flags="0" />
 		</matchPattern>
 	</constraintSet>
